<resources>

    <string name="main_title">啪啪打卡</string>

    <string name="title_icon">啪</string>
    <string name="title_activity_semester">SemesterActivity</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_experiment">ExperimentActivity</string>
    <string name="title_activity_student">StudentActivity</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_upload_history">UploadHistoryActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>

    <string name="app_name">PAPA</string>
    <string name="username_others">用户名(手机号, 邮箱)</string>
    <string name="password">密码</string>
    <string name="cannot_get_telephone_num">获取不了手机号喵 QAQ</string>
    <string name="hint_sign_in_1">登录</string>
    <string name="hint_sign_in_2">您可以使用学号、手机号或者邮箱进行登录</string>
    <string name="portrait">头像</string>
    <string name="comment_area">请在此输入您的评论</string>
    <string name="teacher_assistant_course">助教课程</string>
    <string name="student_course">学生课程</string>
    <string name="about">关于</string>
    <string name="settings">设置</string>
    <string name="favorite">喜欢的实验</string>
    <string name="experiment_history">做过的实验</string>
    <string name="upload_history">我的上传</string>
    <string name="profile">个人中心</string>
    <string name="more">更多</string>
    <string name="notification">通知</string>
    <string name="get_telephone_number">获取手机号</string>
    <string name="user_id">学号</string>
    <string name="user_class">班级</string>
    <string name="user_grade">成绩</string>
    <string name="user_comment">评价</string>
    <string name="user_evaluator">评分人</string>
    <string name="now_editable">现在可以编辑成绩和评价了,再次点击保存</string>
    <string name="now_edit_done">成绩和评价保存好了喵 =w=</string>
    <string name="select_type">请选择上传的内容</string>
    <string-array name="upload_type">
        <item name="camera">照相</item>
        <item name="video">录像</item>
        <item name="gallery">本地相册</item>
    </string-array>
    <string name="for_course">评价课程</string>
    <string name="view_comment">%1$s对课程%2$s的评价</string>
    <string name="upload">上传实验结果</string>
    <string name="view_students">查看本实验的学生</string>
    <string name="view_grades">查看成绩</string>
    <string name="experiment_information">实验信息</string>
    <string name="experiment_result">实验结果</string>
    <string name="log_out">注销</string>
    <string name="confirm_log_out">真的要注销吗(·8·)</string>
    <string-array name="answer_confirm_log_out">
        <item>真的</item>
        <item>假的</item>
    </string-array>
    <string name="no_comment">暂时还没有评价(·8·)</string>
    <string name="hint_comment">轻点星来评分>_&lt;</string>
    <string name="notification_clear_all">通知已清空</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="done">完成</string>
    <string name="mark_all_as_read">全部标记为已读</string>
    <string name="select_all">全选</string>
    <string name="reverse_select">反选</string>
    <string name="send_message">发信</string>
    <string name="send_message_list">发信列表</string>
    <string name="new_message">创建新信息</string>
    <string name="title">标题</string>
    <string name="body">正文</string>
    <string name="recipient">收件人</string>
    <string name="username">用户名</string>
    <string name="mail">邮箱</string>
    <string name="change_password">修改密码</string>
    <string name="change_photo">修改头像</string>
    <string name="no_media">找不到对象T_T</string>
    <string name="invalid_file">不合法的文件格式QAQ</string>
    <string name="new_password">请输入新密码</string>
    <string name="password_double_check">请重新输入新密码</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="password_too_short">密码不能少于6位ww</string>
    <string name="error_double_check">密码不一致TAT</string>
    <string name="change_password_success">修改成功O_O</string>
    <string name="course_name">课程名称</string>
    <string name="course_start_time">开始时间</string>
    <string name="course_end_time">结束时间</string>
    <string name="course_place">上课地点</string>
    <string name="sender">发件人</string>
    <string name="sent_time">发信时间</string>
    <string name="message_from">来自%s的信息</string>
    <string name="click_here_to_download"><u>点击此处下载课程文件</u></string>
    <string name="select_student">请选择学生</string>
    <string name="hint_rating_bar_error_on_low_API_level">在一些低安卓版本上星星的显示可能有问题</string>
    <string name="alert_delete_media">真的要删除吗</string>
    <string-array name="answer_alert_media">
        <item>没错</item>
        <item>没啥事</item>
    </string-array>
    <string name="time_format_simple">%1$s月%2$s日</string>
    <string name="time_format_full">%1$s年%2$s月%3$s日</string>
    <string name="copyright">Copyright©2015 努力上均分组 Powered By Android</string>
    <string name="version">version 1.0.0</string>
    <string name="about_name">名称：啪啪打卡</string>
    <string name="about_author">作者：黄锐皓 雷凯翔 \n （以上排名不分先后）</string>
    <string name="about_version">版本号：1.0.0</string>
    <string name="about_contact">如有任何问题，请联系 \n 黄锐皓 huangruihaocst@126.com \n 雷凯翔 shyoshyo@qq.com</string>
    <string name="about_copyright">この番組はご覧のスポンサーの提供でお送りします</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="action_search">搜索</string>
    <string name="action_edit_grades">编辑成绩</string>
    <string name="not_graded">未评分喵</string>
    <string name="no_information">没有数据的说</string>
    <string name="action_student_information">学生信息</string>
    <string name="action_generate_QR_code">生成二维码</string>
    <string name="action_make_comments">评价该课程</string>
    <string name="action_view_comments">对该课程的评价</string>
    <string name="action_save">保存</string>
    <string name="action_send_message">发送</string>

    <string name="title_semester">学期</string>

    <string name="key_sign_in_course">key_sign_in_course</string>
    <string name="key_course_experiment">key_course_experiment</string>
    <string name="key_to_about">key_to_about</string>
    <string name="key_to_settings">key_to_settings</string>
    <string name="key_to_favorite">key_to_favorite</string>
    <string name="key_to_detail">key_to_detail</string>
    <string name="key_to_experiment_history">key_to_experiment_history</string>
    <string name="key_to_upload_history">key_to_upload_history</string>
    <string name="key_to_edit_profile">key_to_edit_profile</string>
    <string name="key_to_sign_in">key_to_sign_in</string>
    <string name="key_to_notification">key_to_notification</string>
    <string name="key_experiment_experiment_detail">key_experiment_experiment_detail</string>
    <string name="key_to_comment">key_to_comment</string>
    <string name="key_to_sent_list">key_to_sent_lit</string>
    <string name="key_sent_list_new_message">key_sent_list_new_message</string>
    <string name="key_sent_list_sent_detail">key_sent_list_sent_detail</string>

    <!--<string name="color_primary">#2196F3</string>-->
    <!--<string name="color_primary_dark">#1976D2</string>-->
    <string name="title_activity_about_activity">AboutActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_notification">NotificationActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_experiment_detail">ExperimentDetailActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_message_detail">MessageDetailActivity</string>

    <!-- Message -->
    <string name="key_message_detail_activity_message_byte_array">key_message_detail_activity_message_byte_array</string>
    <!-- Message Service -->
    <string name="key_message_service_command">key_message_service_command</string>
    <string name="key_message_service_command_get_all_messages">key_message_service_command_get_all_messages</string>
    <string name="key_message_service_command_stop_listen">key_message_service_command_stop_listen</string>
    <string name="key_message_service_command_start_listen">key_message_service_command_start_listen</string>
    <string name="key_message_service_messages_file_name">messages.dat</string>
    <string name="string_message_title">%s</string>
    <string name="string_message_notify_deadline_title">%d messages are nearing deadline.</string>
    <string name="title_activity_experiment_detail_temp">ExperimentDetailTempActivity</string>
    <string name="title_activity_detail">DetailTempActivity</string>
    <string name="title_activity_comment">CommentTempActivity</string>

    <string name="title_activity_attendance">AttendanceActivity</string>
    <string name="key_attendance_activity_command">key_attendance_activity_command</string>
    <string name="key_attendance_activity_start_sign_in">key_attendance_activity_start_sign_in</string>
    <string name="title_attendance_activity_sign_in_successful">You have successfully signed in %1$s</string>
    <string name="title_attendance_activity_sign_in_content">Time: %1$s, method: %2$s</string>
    <string name="key_settings_file_name">settings.dat</string>
    <string name="title_activity_send_message">SendMessageActivity</string>
    <string name="title_activity_new_message">NewMessageActivity</string>
    <string name="title_activity_sent_detail_activity">SentDetailActivity</string>

    <string-array name="feedback_email">
        <item>huangruihaocst@126.com</item>
        <item>shyoshyo@qq.com</item>
    </string-array>
    <string name="feedback_subject">啪啪打卡用户反馈</string>
    <string name="feedback">反馈信息</string>

</resources>