<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.Activities.papa.receive_message.MessageActivity">

    <item android:id="@+id/action_message_edit"
        android:title="@string/edit"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_message_delete"
        android:title="@string/delete"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_message_done"
        android:title="@string/done"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item android:id="@+id/action_message_select_unselect_all"
        android:title="@string/select_all"
        android:orderInCategory="150"
        app:showAsAction="always"/>
    <item android:id="@+id/action_message_mark_all_as_read"
        android:title="@string/mark_all_as_read"
        android:orderInCategory="200"
        app:showAsAction="never"/>

</menu>
