<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:textAlignment="center"
        android:paddingTop="5sp"
        android:text="@string/change_password"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:background="@color/colorAccent"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:id="@+id/new_password"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_double_check"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:id="@+id/password_double_check"/>

</LinearLayout>