<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_edit_profile"
    tools:context="com.Activities.papa.profile.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/DetailContent"
                android:background="@android:color/transparent"
                android:id="@+id/edit_username"
                android:hint="@string/username"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/DetailContent"
                android:background="@android:color/transparent"
                android:layout_below="@+id/edit_username"
                android:id="@+id/edit_mail"
                android:hint="@string/mail"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_photo"
                android:background="@color/colorAccent"
                android:id="@+id/button_change_photo"
                android:layout_below="@+id/edit_mail"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:background="#FB6400"
                android:layout_below="@id/button_change_photo"
                android:id="@+id/button_change_password" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:id="@+id/log_out"
                android:background="#FE5757"
                android:layout_below="@+id/button_change_password"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
