<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail_temp"
    tools:context="com.Activities.papa.DetailActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                android:id="@+id/textView1"
                style="@style/DetailHead"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView1"
                android:layout_toEndOf="@+id/textView1"
                android:layout_marginLeft="27dp"
                android:layout_marginStart="27dp"
                style="@style/DetailContent"
                android:id="@+id/sender" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_class"
                style="@style/DetailHead"
                android:layout_below="@+id/sender"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp"
                android:id="@+id/textView2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/DetailContent"
                android:layout_alignTop="@+id/textView2"
                android:layout_alignLeft="@+id/sender"
                android:layout_alignStart="@+id/sender"
                android:id="@+id/recipient" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_grade"
                style="@style/DetailHead"
                android:layout_below="@+id/recipient"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp"
                android:id="@+id/textView3" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailContent"
                android:textColor="@color/colorPrimary"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="3"
                android:text=""
                android:id="@+id/sent_time"
                android:background="#FAFAFA"
                android:layout_alignTop="@+id/textView3"
                android:layout_alignLeft="@+id/recipient"
                android:hint="@string/not_graded"
                android:layout_alignStart="@+id/recipient" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_comment"
                style="@style/DetailHead"
                android:layout_below="@+id/sent_time"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp"
                android:id="@+id/textView4"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailContent"
                android:textColor="@color/colorPrimary"
                android:inputType="textMultiLine"
                android:text=""
                android:id="@+id/title"
                android:background="#FAFAFA"
                android:layout_alignTop="@+id/textView4"
                android:layout_alignLeft="@+id/recipient"
                android:layout_alignStart="@+id/recipient"
                android:hint="@string/not_graded"
                android:scrollbars="vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_evaluator"
                style="@style/DetailHead"
                android:layout_below="@+id/title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp"
                android:id="@+id/textView5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailContent"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:id="@+id/body"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/textView5"
                android:hint="@string/not_graded"
                android:layout_toEndOf="@+id/textView5"
                android:layout_marginLeft="27sp"
                android:layout_marginStart="27sp"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
