<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.Fragments.papa.GradesFragment"
    android:background="#FAFAFA"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                android:id="@+id/textView1"
                style="@style/DetailHead"/>
            <TextView
                style="@style/DetailContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView1"
                android:layout_toEndOf="@+id/textView1"
                android:layout_marginLeft="27dp"
                android:layout_marginStart="27dp"
                android:id="@+id/user_id" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_class"
                style="@style/DetailHead"
                android:layout_below="@+id/user_id"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp"
                android:id="@+id/textView2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                style="@style/DetailContent"
                android:layout_alignTop="@+id/textView2"
                android:layout_alignLeft="@+id/user_id"
                android:layout_alignStart="@+id/user_id"
                android:id="@+id/user_class" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_grade"
                style="@style/DetailHead"
                android:layout_below="@+id/user_class"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp"
                android:id="@+id/textView3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailContent"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:id="@+id/user_grades"
                android:background="#FAFAFA"
                android:layout_alignTop="@+id/textView3"
                android:layout_alignLeft="@+id/user_class"
                android:layout_alignStart="@+id/user_class" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_comment"
                style="@style/DetailHead"
                android:layout_below="@+id/user_grades"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp"
                android:id="@+id/textView4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailContent"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:id="@+id/title"
                android:background="#FAFAFA"
                android:layout_alignTop="@+id/textView4"
                android:layout_alignLeft="@+id/user_class"
                android:layout_alignStart="@+id/user_class"
                android:scrollbars="vertical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_evaluator"
                style="@style/DetailHead"
                android:layout_below="@+id/title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="23dp"
                android:id="@+id/textView5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/DetailContent"
                android:textColor="@color/colorPrimary"
                android:text=""
                android:id="@+id/body"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/textView5"
                android:layout_toEndOf="@+id/textView5" />
        </RelativeLayout>
    </ScrollView>

</FrameLayout>
